--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+##### Application properties #####
+app.name = '@project.name@'
+app.desc = '@project.description@'
+app.version = '@project.version@'
+app.url=http://localhost:8080
+app.dev-name=Gustavo\u00e1n Martin\u00fas Masera
+app.dev-email=gustavomasera491@gmail.com
+
 spring.application.name=scaffolding
